--- a/adminpanel/src/main/res/values/colors.xml
+++ b/adminpanel/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="accent_color">#1FC57A</color>
+    <color name="gradient_start_color">#53E88B</color>
+    <color name="gradient_end_color">#15BE77</color>
 </resources>
