--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="5dp"
         android:fontFamily="@font/yeonsung_regular"
         android:text="@string/application_name"
-        android:textColor="@color/ascent_color"
+        android:textColor="@color/accent_color"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="@id/loginActivityAppLogo"
         app:layout_constraintStart_toStartOf="@id/loginActivityAppLogo"
@@ -38,7 +38,7 @@
         android:layout_marginTop="2dp"
         android:fontFamily="@font/yeonsung_regular"
         android:text="@string/app_motto"
-        android:textColor="@color/ascent_color"
+        android:textColor="@color/accent_color"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@+id/loginActivityAppName"
         app:layout_constraintStart_toStartOf="@+id/loginActivityAppName"
@@ -51,7 +51,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/yatraone_regular"
         android:text="@string/login_title"
-        android:textColor="@color/ascent_color"
+        android:textColor="@color/accent_color"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="@+id/loginActivityAppLogo"
         app:layout_constraintStart_toStartOf="@+id/loginActivityAppLogo"
@@ -120,7 +120,7 @@
         android:fontFamily="@font/lato_regular"
         android:paddingEnd="3dp"
         android:elevation="10dp"
-        android:shadowColor="@color/ascent_color"
+        android:shadowColor="@color/accent_color"
         android:textAllCaps="false"
         app:layout_constraintEnd_toStartOf="@+id/loginActivityFacebookButton"
         app:layout_constraintHorizontal_bias="0.5"
@@ -139,7 +139,7 @@
         android:fontFamily="@font/lato_regular"
         android:paddingEnd="3dp"
         android:elevation="10dp"
-        android:shadowColor="@color/ascent_color"
+        android:shadowColor="@color/accent_color"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -155,7 +155,7 @@
         android:textColor="@color/white"
         android:fontFamily="@font/lato_bold"
         android:elevation="10dp"
-        android:shadowColor="@color/ascent_color"
+        android:shadowColor="@color/accent_color"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +169,7 @@
         android:clickable="true"
         android:fontFamily="@font/yatraone_regular"
         android:text="Don't Have an Account?"
-        android:textColor="@color/ascent_color"
+        android:textColor="@color/accent_color"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="@+id/loginActivityLoginButton"
         app:layout_constraintStart_toStartOf="@+id/loginActivityLoginButton"
@@ -183,7 +183,7 @@
         android:fontFamily="@font/lato_regular"
         android:gravity="center"
         android:text="@string/designer"
-        android:textColor="@color/ascent_color"
+        android:textColor="@color/accent_color"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
