--- a/app/src/main/res/layout/activity_food_description.xml
+++ b/app/src/main/res/layout/activity_food_description.xml
@@ -26,7 +26,7 @@
         android:text="Food Name"
         android:textSize="35sp"
         android:fontFamily="@font/yeonsung_regular"
-        android:textColor="@color/ascent_color"
+        android:textColor="@color/accent_color"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
