--- a/app/src/main/res/layout/activity_select_location.xml
+++ b/app/src/main/res/layout/activity_select_location.xml
@@ -54,7 +54,7 @@
         android:fontFamily="@font/lato_regular"
         android:gravity="center"
         android:text="@string/designer"
-        android:textColor="@color/ascent_color"
+        android:textColor="@color/accent_color"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
