--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -52,7 +52,7 @@
         android:textSize="20sp"
         android:layout_marginBottom="30dp"
         android:fontFamily="@font/lato_regular"
-        android:textColor="@color/ascent_color"
+        android:textColor="@color/accent_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/splashActivityAppMotto"
         app:layout_constraintStart_toStartOf="@+id/splashActivityAppMotto" />
