--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -55,7 +55,7 @@
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/lato_bold"
                 android:textSize="16sp"
-                android:textColor="@color/ascent_color"
+                android:textColor="@color/accent_color"
                 android:layout_marginBottom="6dp"
                 app:layout_constraintBottom_toBottomOf="@+id/cartItemImage"
                 app:layout_constraintStart_toEndOf="@+id/cartItemImage" />
