--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,7 +44,7 @@
         android:text="View Menu"
         android:fontFamily="@font/yatraone_regular"
         android:textSize="16sp"
-        android:textColor="@color/ascent_color"
+        android:textColor="@color/accent_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/homeFragmentImageScrollList" />
 
