--- a/app/src/main/res/layout/history_item_layout.xml
+++ b/app/src/main/res/layout/history_item_layout.xml
@@ -66,7 +66,7 @@
                 android:text="Rs.100"
                 android:fontFamily="@font/yatraone_regular"
                 android:textSize="18sp"
-                android:textColor="@color/ascent_color"
+                android:textColor="@color/accent_color"
                 android:layout_marginBottom="2dp"
                 app:layout_constraintBottom_toBottomOf="@id/historyItemFoodImage"
                 app:layout_constraintStart_toStartOf="@id/historyItemFoodRestaurant"/>
