--- a/app/src/main/res/layout/menu_item_layout.xml
+++ b/app/src/main/res/layout/menu_item_layout.xml
@@ -55,7 +55,7 @@
                 android:fontFamily="@font/lato_bold"
                 android:text="Rs.0"
                 android:layout_marginTop="15dp"
-                android:textColor="@color/ascent_color"
+                android:textColor="@color/accent_color"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
