--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.FoodOrderingApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/ascent_color</item>
+         <item name="colorPrimary">@color/accent_color</item>
     </style>
 
     <style name="Theme.FoodOrderingApp" parent="Base.Theme.FoodOrderingApp" />
