--- a/adminpanel/src/main/res/layout/activity_add_food_item.xml
+++ b/adminpanel/src/main/res/layout/activity_add_food_item.xml
@@ -23,12 +23,13 @@
         android:id="@+id/addFoodActivityAddItemText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Add Item"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/yeonsung_regular"
-        android:textSize="40sp"
+        android:text="Add Item"
         android:textColor="@color/accent_color"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/addFoodItemActivityBackButton" />
 
