--- a/adminpanel/src/main/res/layout/activity_create_new_user_admin.xml
+++ b/adminpanel/src/main/res/layout/activity_create_new_user_admin.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignupActivity">
+    tools:context=".CreateNewUserAdminActivity">
 
     <ImageView
-        android:id="@+id/signupActivityAppLogo"
+        android:id="@+id/createNewUserActivityBackButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:tint="@color/accent_color"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back_arrow"/>
+
+    <ImageView
+        android:id="@+id/createNewUserActivityAppLogo"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginTop="20dp"
@@ -19,7 +31,7 @@
         app:srcCompat="@drawable/app_logo" />
 
     <TextView
-        android:id="@+id/signupActivityAppName"
+        android:id="@+id/createNewUserActivityAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -27,25 +39,25 @@
         android:text="@string/application_name"
         android:textColor="@color/accent_color"
         android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="@id/signupActivityAppLogo"
-        app:layout_constraintStart_toStartOf="@id/signupActivityAppLogo"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityAppLogo" />
+        app:layout_constraintEnd_toEndOf="@id/createNewUserActivityAppLogo"
+        app:layout_constraintStart_toStartOf="@id/createNewUserActivityAppLogo"
+        app:layout_constraintTop_toBottomOf="@+id/createNewUserActivityAppLogo" />
 
     <TextView
-        android:id="@+id/signupActivitySignupText"
+        android:id="@+id/createNewUserActivityCreateNewUserText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/yatraone_regular"
-        android:text="Sign Up Here For Your\nAdmin DashBoard"
+        android:text="Create New User Admin"
         android:gravity="center"
         android:textColor="@color/accent_color"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/signupActivityAppLogo"
-        app:layout_constraintStart_toStartOf="@+id/signupActivityAppLogo"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityAppName" />
+        app:layout_constraintEnd_toEndOf="@+id/createNewUserActivityAppLogo"
+        app:layout_constraintStart_toStartOf="@+id/createNewUserActivityAppLogo"
+        app:layout_constraintTop_toBottomOf="@+id/createNewUserActivityAppName" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/signupActivityLocationView"
+        android:id="@+id/createNewUserActivityLocationView"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="57dp"
@@ -56,13 +68,13 @@
         app:endIconTint="@color/black"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivitySignupText">
+        app:layout_constraintTop_toBottomOf="@+id/createNewUserActivityCreateNewUserText">
 
         <AutoCompleteTextView
-            android:id="@+id/signupActivityLocationList"
+            android:id="@+id/createNewUserActivityLocationList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/lato_bold"
@@ -73,7 +85,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signupActivityOwnerName"
+        android:id="@+id/createNewUserActivityOwnerName"
         android:layout_width="0dp"
         android:layout_height="57dp"
         android:layout_marginStart="20dp"
@@ -90,10 +102,10 @@
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityLocationView" />
+        app:layout_constraintTop_toBottomOf="@+id/createNewUserActivityLocationView" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signupActivityRestaurantName"
+        android:id="@+id/createNewUserActivityRestaurantName"
         android:layout_width="0dp"
         android:layout_height="57dp"
         android:layout_marginStart="20dp"
@@ -110,10 +122,10 @@
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityOwnerName" />
+        app:layout_constraintTop_toBottomOf="@+id/createNewUserActivityOwnerName" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signupActivityEmail"
+        android:id="@+id/createNewUserActivityEmail"
         android:layout_width="0dp"
         android:layout_height="57dp"
         android:layout_marginStart="20dp"
@@ -130,10 +142,10 @@
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityRestaurantName" />
+        app:layout_constraintTop_toBottomOf="@+id/createNewUserActivityRestaurantName" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signupActivityPassword"
+        android:id="@+id/createNewUserActivityPassword"
         android:layout_width="0dp"
         android:layout_height="57dp"
         android:layout_marginStart="20dp"
@@ -151,10 +163,10 @@
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/createNewUserActivityEmail" />
 
     <TextView
-        android:id="@+id/signupActivityContinueText"
+        android:id="@+id/createNewUserActivityContinueText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -164,11 +176,11 @@
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/createNewUserActivityPassword" />
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signupActivityGoogleButton"
+        android:id="@+id/createNewUserActivityGoogleButton"
         android:layout_width="157dp"
         android:layout_height="57dp"
         android:layout_margin="10dp"
@@ -181,12 +193,12 @@
         android:elevation="10dp"
         android:shadowColor="@color/accent_color"
         android:textAllCaps="false"
-        app:layout_constraintEnd_toStartOf="@+id/signupActivityFacebookButton"
+        app:layout_constraintEnd_toStartOf="@+id/createNewUserActivityFacebookButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signupActivityContinueText" />
+        app:layout_constraintTop_toBottomOf="@id/createNewUserActivityContinueText" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signupActivityFacebookButton"
+        android:id="@+id/createNewUserActivityFacebookButton"
         android:layout_width="157dp"
         android:layout_height="57dp"
         android:layout_margin="10dp"
@@ -201,11 +213,11 @@
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/signupActivityGoogleButton"
-        app:layout_constraintTop_toBottomOf="@id/signupActivityContinueText" />
+        app:layout_constraintStart_toEndOf="@+id/createNewUserActivityGoogleButton"
+        app:layout_constraintTop_toBottomOf="@id/createNewUserActivityContinueText" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signupActivityCreateAccountButton"
+        android:id="@+id/createNewUserActivityCreateAccountButton"
         android:layout_width="0dp"
         android:layout_height="57dp"
         android:layout_marginTop="10dp"
@@ -219,23 +231,6 @@
         android:layout_marginEnd="70dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityFacebookButton" />
-
-    <TextView
-        android:id="@+id/signupActivityAlreadyHaveAcountButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:fontFamily="@font/yatraone_regular"
-        android:text="Already Have an Account?"
-        android:textColor="@color/accent_color"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupActivityCreateAccountButton" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/createNewUserActivityFacebookButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
